--- a/unidade5/Projetos_unidade5/10_classeMetodos[/index.html
+++ b/unidade5/Projetos_unidade5/10_classeMetodos[/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EX_09</title>
+    <title>Class_Metodos</title>
     <script src="script.js"></script>
 </head>
 <body>
